ver 2 http://forum.lazarus.freepascal.org/index.php/topic,30122.msg194790.html#msg194790

--- a/unit1.lfm
+++ b/unit1.lfm
@@ -452,6 +452,11 @@ object Form1: TForm1
     MouseSelActions = <>
     Lines.Strings = (
       'function TKernelResampler.GetSampleFloat(X, Y: TFloat): TColor32;'
+      '  Procedure CheckCol(HlposX: Integer; var Result: Integer);'
+      '  begin'
+      '    if (HlposX <= aStartCol.Logical) or ((Result >= 0) and (Result < HlposX)) then exit;'
+      '    Result := HlposX;'
+      '  end; '
       'var'
       '  Filter: TFilterMethod;'
       '  WrapProcVert: TWrapProcEx absolute Filter; //line has keyword ''absolute'''
@@ -460,12 +465,20 @@ object Form1: TForm1
       ''
       'begin'
       ''
-      '  if not found then begin found := true; end else '
+      '  if not found then begin found := false; end else'
       '  begin found := not found; end;'
       '  KWidth := Ceil(FKernel.GetWidth);'
       ''
       '  clX := Ceil(X);'
       '  clY := Ceil(Y);'
+      '  repeat'
+      '    wedosomething();'
+      '  until;'
+      ''
+      '  while idle do'
+      '  begin'
+      '    wedosomething();'
+      '  end;'
       ''
       '  case PixelAccessMode of'
       '    pamUnsafe, pamWrap:'
@@ -478,11 +491,17 @@ object Form1: TForm1
       '      begin'
       '        with ClipRect do'
       '        begin'
+      '          if not found then begin found := false; end else'
+      '          begin found := not found; end;'
+      ''
       '          if not ((clX < Left) or (clX > Right) or (clY < Top) or (clY > Bottom)) then'
       '          begin'
       '            Edge := False;'
       ''
-      '            if clX - KWidth < Left then'
+      '            if not found then begin found := false; end else'
+      '            begin found := not found; end;'
+      ''
+      '            if not ((clX < Left) or (clX > Right) or (clY < Top) or (clY > Bottom)) then'
       '            begin'
       '              LoX := Left - clX;'
       '              Edge := True;'
