reorder the proc for markupcolor activated properly

--- a/unit1.lfm
+++ b/unit1.lfm
@@ -25,9 +25,9 @@ object Form1: TForm1
     Height = 467
     Top = 0
     Width = 630
-    ActivePage = TabSheet6
+    ActivePage = TabSheet4
     Align = alClient
-    TabIndex = 3
+    TabIndex = 4
     TabOrder = 1
     object TabSheet1: TTabSheet
       Caption = 'Pascal'
@@ -2957,20 +2957,87 @@ object Form1: TForm1
         MouseTextActions = <>
         MouseSelActions = <>
         Lines.Strings = (
-          'import re'
-          'for test_string in [''555-1212'', ''ILL-EGAL'']:'
-          '    if re.match(r''^\d{3}-\d{4}$'', test_string):'
-          '        print test_string, ''is a valid US local phone number'''
-          '    else:'
-          '        print test_string, ''rejected'''
+          ''''''''
+          'Module to play WAV files using PyAudio.'
+          'Author: Vasudev Ram - http://jugad2.blogspot.com'
+          'Adapted from the example at:'
+          'https://people.csail.mit.edu/hubert/pyaudio/#docs'
+          'PyAudio Example: Play a wave file.'
+          ''''''''
           ''
-          'prices = {''apple'': 0.40, ''banana'': 0.50}'
-          'my_purchase = {'
-          '    ''apple'': 1,'
-          '    ''banana'': 6}'
-          'grocery_bill = sum(prices[fruit] * my_purchase[fruit]'
-          '                   for fruit in my_purchase)'
-          'print ''I owe the grocer $%.2f'' % grocery_bill'
+          'import pyaudio'
+          'import wave'
+          'import sys'
+          'import os.path'
+          'import time'
+          ''
+          'CHUNK_SIZE = 1024'
+          ''
+          'def play_wav(wav_filename, chunk_size=CHUNK_SIZE):'
+          '    '''''''
+          '    Play (on the attached system sound device) the WAV file'
+          '    named wav_filename.'
+          '    '''''''
+          ''
+          '    try:'
+          '        print ''Trying to play file '' + wav_filename'
+          '        wf = wave.open(wav_filename, ''rb'')'
+          '    except IOError as ioe:'
+          '        sys.stderr.write(''IOError on file '' + wav_filename + ''\n'' + \'
+          '        str(ioe) + ''. Skipping.\n'')'
+          '        return'
+          '    except EOFError as eofe:'
+          '        sys.stderr.write(''EOFError on file '' + wav_filename + ''\n'' + \'
+          '        str(eofe) + ''. Skipping.\n'')'
+          '        return'
+          ''
+          '    # Instantiate PyAudio.'
+          '    p = pyaudio.PyAudio()'
+          ''
+          '    # Open stream.'
+          '    stream = p.open(format=p.get_format_from_width(wf.getsampwidth()),'
+          '        channels=wf.getnchannels(),'
+          '        rate=wf.getframerate(),'
+          '                    output=True)'
+          ''
+          '    data = wf.readframes(chunk_size)'
+          '    while len(data) > 0:'
+          '        stream.write(data)'
+          '        data = wf.readframes(chunk_size)'
+          ''
+          '    # Stop stream.'
+          '    stream.stop_stream()'
+          '    stream.close()'
+          ''
+          '    # Close PyAudio.'
+          '    p.terminate()'
+          ''
+          'def usage():'
+          '    prog_name = os.path.basename(sys.argv[0])'
+          '    print "Usage: {} filename.wav".format(prog_name)'
+          '    print "or: {} -f wav_file_list.txt".format(prog_name)'
+          ''
+          'def main():'
+          '    lsa = len(sys.argv)'
+          '    if lsa < 2:'
+          '        usage()'
+          '        sys.exit(1)'
+          '    elif lsa == 2:'
+          '        play_wav(sys.argv[1])'
+          '    else:'
+          '        if sys.argv[1] != ''-f'':'
+          '            usage()'
+          '            sys.exit(1)'
+          '        with open(sys.argv[2]) as wav_list_fil:'
+          '            for wav_filename in wav_list_fil:'
+          '                # Remove trailing newline.'
+          '                if wav_filename[-1] == ''\n'':'
+          '                    wav_filename = wav_filename[:-1]'
+          '                play_wav(wav_filename)'
+          '                time.sleep(3)'
+          ''
+          'if __name__ == ''__main__'':'
+          '    main()'
         )
         VisibleSpecialChars = [vscSpace, vscTabAtLast]
         SelectedColor.BackPriority = 50
