--- a/unit1.lfm
+++ b/unit1.lfm
@@ -15,7 +15,7 @@ object Form1: TForm1
     Width = 630
     Align = alBottom
     Caption = 'Panel1'
-    Color = 13751626
+    Color = 9830346
     ParentColor = False
     TabOrder = 0
     Visible = False
@@ -1370,14 +1370,12 @@ object Form1: TForm1
       Caption = 'Demo Fold'
       ClientHeight = 441
       ClientWidth = 622
-      TabVisible = False
       inline SynEdit3: TSynEdit
         Left = 0
         Height = 441
         Top = 0
         Width = 622
         Align = alClient
-        Color = clMaroon
         Font.Height = -13
         Font.Name = 'Courier New'
         Font.Pitch = fpFixed
@@ -1861,7 +1859,7 @@ object Form1: TForm1
         FoldedCodeColor.FrameColor = clGray
         MouseLinkColor.Background = clNone
         MouseLinkColor.Foreground = clBlue
-        LineHighlightColor.Background = clNone
+        LineHighlightColor.Background = 9830346
         LineHighlightColor.Foreground = clNone
         inline SynLeftGutterPartList1: TSynGutterPartList
           object SynGutterMarks1: TSynGutterMarks
