--- a/unit2.lfm
+++ b/unit2.lfm
@@ -1,13 +1,13 @@
 object Form2: TForm2
-  Left = 346
+  Left = 338
   Height = 553
-  Top = 137
+  Top = 151
   Width = 847
   Caption = 'Form2'
   ClientHeight = 553
   ClientWidth = 847
   OnCreate = FormCreate
-  LCLVersion = '1.5'
+  LCLVersion = '1.7'
   Visible = True
   WindowState = wsMaximized
   object Panel1: TPanel
@@ -17,19 +17,31 @@ object Form2: TForm2
     Width = 847
     Align = alBottom
     Caption = 'Panel1'
+    ClientHeight = 86
+    ClientWidth = 847
     Color = 9830346
     ParentColor = False
     TabOrder = 0
     Visible = False
+    object Panel3: TPanel
+      Left = 56
+      Height = 50
+      Top = 24
+      Width = 170
+      Caption = 'Panel3'
+      Color = 14013696
+      ParentColor = False
+      TabOrder = 0
+    end
   end
   object PageControl1: TPageControl
     Left = 0
     Height = 435
     Top = 32
     Width = 847
-    ActivePage = TabSheet1
+    ActivePage = TabSheet8
     Align = alClient
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 1
     object TabSheet1: TTabSheet
       Caption = 'Pascal'
@@ -478,9 +490,6 @@ object Form2: TForm2
         MouseTextActions = <>
         MouseSelActions = <>
         Lines.Strings = (
-          '{'
-          ''
-          '}'
           'unit SynEditMarkupFoldColoring;'
           ''
           '{$mode objfpc}{$H+}'
@@ -542,6 +551,156 @@ object Form2: TForm2
           '  Forms {debug},'
           '  SynEdit,SynEditTypes, SynEditFoldedView, SynEditMiscProcs;'
           ''
+          '{.$define debug_FC_line_changed}'
+          'procedure TSynEditMarkupFoldColors.DoTextChanged(StartLine, EndLine,'
+          '  ACountDiff: Integer);'
+          '{$ifdef debug_FC_line_changed}'
+          'var F : TCustomForm;'
+          'begin'
+          '  F := GetParentForm(self.SynEdit);'
+          '  if F <> nil then'
+          '    //F.Caption := Format(''Start:%d Endline:%d  Diff:%d'',[StartLine, EndLIne, ACountDiff]);'
+          '  F.Caption := F.Caption +  Caret.LineText'
+          '{$else}'
+          ''
+          '  procedure Blah;'
+          '  var a:b;'
+          '  begin foo(); '
+          '  end;'
+          ''
+          '  function GetPairCloseFold(aRow, X : integer  ): Integer;'
+          '  var'
+          '    y,i,LCnt : integer;'
+          '    HL: TSynCustomFoldHighlighter;'
+          '    NodeList: TLazSynFoldNodeInfoList;'
+          '    TmpNode, CloseNode: TSynFoldNodeInfo;'
+          ''
+          '    function FindEndNode(StartNode: TSynFoldNodeInfo;'
+          '                       {var} YIndex, NIndex: Integer): TSynFoldNodeInfo;'
+          '      function SearchLine(ALineIdx: Integer; var ANodeIdx: Integer): TSynFoldNodeInfo;'
+          '      begin'
+          '        NodeList.Line := ALineIdx;'
+          '        repeat'
+          '          inc(ANodeIdx);'
+          '          Result := NodeList[ANodeIdx];'
+          '        until (sfaInvalid in Result.FoldAction)'
+          '           or (Result.NestLvlEnd <= StartNode.NestLvlStart);'
+          '      end;'
+          ''
+          '    begin'
+          '      Result := SearchLine(YIndex, NIndex);'
+          '      if not (sfaInvalid in Result.FoldAction) then'
+          '        exit;'
+          ''
+          '      inc(YIndex);'
+          '      while (YIndex < LCnt) and'
+          '            (HL.FoldBlockMinLevel(YIndex, StartNode.FoldGroup, [sfbIncludeDisabled])'
+          '             > StartNode.NestLvlStart)'
+          '      do'
+          '        inc(YIndex);'
+          '      if YIndex = LCnt then'
+          '        exit;'
+          ''
+          '      NIndex := -1;'
+          '      Result := SearchLine(YIndex, NIndex);'
+          ''
+          '      if (Result.LogXEnd = 0) or (sfaLastLineClose in Result.FoldAction) then'
+          '        Result.FoldAction := [sfaInvalid]; // LastLine closed Node(maybe force-closed?)'
+          '    end;'
+          ''
+          '  begin'
+          '    Result := -1;'
+          '    y := aRow -1;'
+          ''
+          '    HL := TCustomSynEdit(self.SynEdit).Highlighter as TSynCustomFoldHighlighter;'
+          '    HL.CurrentLines := Lines;'
+          '    LCnt := Lines.Count;'
+          '    HL.FoldNodeInfo[y].ClearFilter; // only needed once, in case the line was already used'
+          ''
+          '    NodeList := HL.FoldNodeInfo[y];'
+          '    NodeList.AddReference;'
+          '    try'
+          '      NodeList.ActionFilter := [sfaOpen];'
+          '      i := 0;'
+          '      repeat'
+          '        TmpNode := NodeList[i];'
+          ''
+          '        if TmpNode.LogXStart < X-1 then'
+          '        begin'
+          '          inc(i);'
+          '          continue;'
+          '        end;'
+          ''
+          '        //find till valid'
+          '        while (sfaInvalid in TmpNode.FoldAction) and (i < NodeList.Count) do'
+          '        begin'
+          '          inc(i);'
+          '          TmpNode := NodeList[i];'
+          '        end;'
+          '        if not (sfaInvalid in TmpNode.FoldAction) then'
+          '        begin'
+          '          CloseNode := FindEndNode(TmpNode, y, i);'
+          '          //AddHighlight(TmpNode);'
+          '          Result := CloseNode.LineIndex;'
+          '          exit;'
+          '        end;'
+          ''
+          '        inc(i);'
+          '      until i >= NodeList.Count;'
+          ''
+          '    finally'
+          '      NodeList.ReleaseReference;'
+          '    end;'
+          '  end;'
+          ''
+          ''
+          '  function IsFoldMoved( aRow: Integer ): integer;'
+          '  var S : string;'
+          '    i,n : integer;'
+          '  begin'
+          '    Result := -1;'
+          '    n := -1;'
+          ''
+          '    S := Caret.LineText;'
+          '    for i := 1 to Min(Length(S), Length(FPrevCaretText)) do'
+          '    begin'
+          '      if S[i] <> FPrevCaretText[i] then'
+          '      begin'
+          '        n := i;'
+          '        break;'
+          '      end;'
+          '    end;'
+          ''
+          '    if n < 0 then exit;'
+          ''
+          '    Result := GetPairCloseFold(aRow, n);'
+          '    //limit to screen bottom'
+          '    if Result > 0 then'
+          '    begin'
+          '      inc(Result);//because sometime ''end'' has trailing vertical line'
+          '      with TCustomSynEdit(SynEdit) do'
+          '        Result := min(Result, TopLine +LinesInWindow);// . .RowToScreenRow(i);'
+          '    end;'
+          ''
+          '  end;'
+          'var'
+          '  EndFoldLine,y : integer;'
+          'begin'
+          '  if EndLine < 0 then exit; //already refreshed by syn'
+          ''
+          '  y := Caret.LineBytePos.y;'
+          '  EndFoldLine := IsFoldMoved(y);'
+          '  if EndFoldLine > 0 then'
+          '  begin'
+          '    InvalidateSynLines(y+1, EndFoldLine);'
+          '  end;'
+          ''
+          '  FPrevCaretText := Caret.LineText;'
+          '  // I found that almost anything has been repaint by the SynEdit,'
+          '  // except the trailing space editing: we should repaint them here.'
+          '{$endif}'
+          'end;'
+          '  '
           'procedure TForm1.FormCreate(Sender: TObject);'
           'var r  : char;'
           '  c : byte;'
@@ -964,152 +1123,6 @@ object Form2: TForm2
           '  result := TCustomSynEdit(self.SynEdit).Highlighter as TSynCustomFoldHighlighter;'
           'end;'
           ''
-          '{.$define debug_FC_line_changed}'
-          'procedure TSynEditMarkupFoldColors.DoTextChanged(StartLine, EndLine,'
-          '  ACountDiff: Integer);'
-          '{$ifdef debug_FC_line_changed}'
-          'var F : TCustomForm;'
-          'begin'
-          '  F := GetParentForm(self.SynEdit);'
-          '  if F <> nil then'
-          '    //F.Caption := Format(''Start:%d Endline:%d  Diff:%d'',[StartLine, EndLIne, ACountDiff]);'
-          '  F.Caption := F.Caption +  Caret.LineText'
-          '{$else}'
-          ''
-          ''
-          ''
-          '  function GetPairCloseFold(aRow, X : integer  ): Integer;'
-          '  var'
-          '    y,i,LCnt : integer;'
-          '    HL: TSynCustomFoldHighlighter;'
-          '    NodeList: TLazSynFoldNodeInfoList;'
-          '    TmpNode, CloseNode: TSynFoldNodeInfo;'
-          ''
-          '    function FindEndNode(StartNode: TSynFoldNodeInfo;'
-          '                       {var} YIndex, NIndex: Integer): TSynFoldNodeInfo;'
-          '      function SearchLine(ALineIdx: Integer; var ANodeIdx: Integer): TSynFoldNodeInfo;'
-          '      begin'
-          '        NodeList.Line := ALineIdx;'
-          '        repeat'
-          '          inc(ANodeIdx);'
-          '          Result := NodeList[ANodeIdx];'
-          '        until (sfaInvalid in Result.FoldAction)'
-          '           or (Result.NestLvlEnd <= StartNode.NestLvlStart);'
-          '      end;'
-          ''
-          '    begin'
-          '      Result := SearchLine(YIndex, NIndex);'
-          '      if not (sfaInvalid in Result.FoldAction) then'
-          '        exit;'
-          ''
-          '      inc(YIndex);'
-          '      while (YIndex < LCnt) and'
-          '            (HL.FoldBlockMinLevel(YIndex, StartNode.FoldGroup, [sfbIncludeDisabled])'
-          '             > StartNode.NestLvlStart)'
-          '      do'
-          '        inc(YIndex);'
-          '      if YIndex = LCnt then'
-          '        exit;'
-          ''
-          '      NIndex := -1;'
-          '      Result := SearchLine(YIndex, NIndex);'
-          ''
-          '      if (Result.LogXEnd = 0) or (sfaLastLineClose in Result.FoldAction) then'
-          '        Result.FoldAction := [sfaInvalid]; // LastLine closed Node(maybe force-closed?)'
-          '    end;'
-          ''
-          '  begin'
-          '    Result := -1;'
-          '    y := aRow -1;'
-          ''
-          '    HL := TCustomSynEdit(self.SynEdit).Highlighter as TSynCustomFoldHighlighter;'
-          '    HL.CurrentLines := Lines;'
-          '    LCnt := Lines.Count;'
-          '    HL.FoldNodeInfo[y].ClearFilter; // only needed once, in case the line was already used'
-          ''
-          '    NodeList := HL.FoldNodeInfo[y];'
-          '    NodeList.AddReference;'
-          '    try'
-          '      NodeList.ActionFilter := [sfaOpen];'
-          '      i := 0;'
-          '      repeat'
-          '        TmpNode := NodeList[i];'
-          ''
-          '        if TmpNode.LogXStart < X-1 then'
-          '        begin'
-          '          inc(i);'
-          '          continue;'
-          '        end;'
-          ''
-          '        //find till valid'
-          '        while (sfaInvalid in TmpNode.FoldAction) and (i < NodeList.Count) do'
-          '        begin'
-          '          inc(i);'
-          '          TmpNode := NodeList[i];'
-          '        end;'
-          '        if not (sfaInvalid in TmpNode.FoldAction) then'
-          '        begin'
-          '          CloseNode := FindEndNode(TmpNode, y, i);'
-          '          //AddHighlight(TmpNode);'
-          '          Result := CloseNode.LineIndex;'
-          '          exit;'
-          '        end;'
-          ''
-          '        inc(i);'
-          '      until i >= NodeList.Count;'
-          ''
-          '    finally'
-          '      NodeList.ReleaseReference;'
-          '    end;'
-          '  end;'
-          ''
-          ''
-          '  function IsFoldMoved( aRow: Integer ): integer;'
-          '  var S : string;'
-          '    i,n : integer;'
-          '  begin'
-          '    Result := -1;'
-          '    n := -1;'
-          ''
-          '    S := Caret.LineText;'
-          '    for i := 1 to Min(Length(S), Length(FPrevCaretText)) do'
-          '    begin'
-          '      if S[i] <> FPrevCaretText[i] then'
-          '      begin'
-          '        n := i;'
-          '        break;'
-          '      end;'
-          '    end;'
-          ''
-          '    if n < 0 then exit;'
-          ''
-          '    Result := GetPairCloseFold(aRow, n);'
-          '    //limit to screen bottom'
-          '    if Result > 0 then'
-          '    begin'
-          '      inc(Result);//because sometime ''end'' has trailing vertical line'
-          '      with TCustomSynEdit(SynEdit) do'
-          '        Result := min(Result, TopLine +LinesInWindow);// . .RowToScreenRow(i);'
-          '    end;'
-          ''
-          '  end;'
-          'var'
-          '  EndFoldLine,y : integer;'
-          'begin'
-          '  if EndLine < 0 then exit; //already refreshed by syn'
-          ''
-          '  y := Caret.LineBytePos.y;'
-          '  EndFoldLine := IsFoldMoved(y);'
-          '  if EndFoldLine > 0 then'
-          '  begin'
-          '    InvalidateSynLines(y+1, EndFoldLine);'
-          '  end;'
-          ''
-          '  FPrevCaretText := Caret.LineText;'
-          '  // I found that almost anything has been repaint by the SynEdit,'
-          '  // except the trailing space editing: we should repaint them here.'
-          '{$endif}'
-          'end;'
           ''
           'procedure TSynEditMarkupFoldColors.DoCaretChanged(Sender: TObject);'
           'var Y : integer;'
