--- a/unit2.lfm
+++ b/unit2.lfm
@@ -551,6 +551,73 @@ object Form2: TForm2
           '  Forms {debug},'
           '  SynEdit,SynEditTypes, SynEditFoldedView, SynEditMiscProcs;'
           ''
+          '{$IFDEF BCB}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '{$ELSE}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: HDC);'
+          '{$ENDIF}'
+          'begin'
+          '  (FBackend as IDeviceContextSupport).Draw(DstRect, SrcRect, hSrc);'
+          'end;'
+          ''
+          'procedure TBitmap32.DrawTo(hDst: {$IFDEF BCB}Cardinal{$ELSE}HDC{$ENDIF}; DstX, DstY: Integer);'
+          'begin'
+          '  if Empty then Exit;'
+          '  (FBackend as IDeviceContextSupport).DrawTo(hDst, DstX, DstY);'
+          'end;'
+          ''
+          'procedure TBitmap32.DrawTo(hDst: {$IFDEF BCB}Cardinal{$ELSE}HDC{$ENDIF}; const DstRect, SrcRect: TRect);'
+          'begin'
+          '  if Empty then Exit;'
+          '  (FBackend as IDeviceContextSupport).DrawTo(hDst, DstRect, SrcRect);'
+          'end;'
+          ''
+          'procedure TBitmap32.TileTo(hDst: {$IFDEF BCB}Cardinal{$ELSE}HDC{$ENDIF}; const DstRect, SrcRect: TRect);'
+          'const'
+          '  MaxTileSize = 1024;'
+          'var'
+          '  DstW, DstH: Integer;'
+          '  TilesX, TilesY: Integer;'
+          '  Buffer: TCustomBitmap32;'
+          '  I, J: Integer;'
+          '  ClipRect, R: TRect;'
+          '  X, Y: Integer;'
+          'begin'
+          '  DstW := DstRect.Right - DstRect.Left;'
+          '  DstH := DstRect.Bottom - DstRect.Top;'
+          '  TilesX := (DstW + MaxTileSize - 1) div MaxTileSize;'
+          '  TilesY := (DstH + MaxTileSize - 1) div MaxTileSize;'
+          '  Buffer := TBitmap32.Create;'
+          '  try'
+          '    for J := 0 to TilesY - 1 do'
+          '    begin'
+          '      for I := 0 to TilesX - 1 do'
+          '      begin'
+          '        ClipRect.Left := I * MaxTileSize;'
+          '        ClipRect.Top := J * MaxTileSize;'
+          '        ClipRect.Right := (I + 1) * MaxTileSize;'
+          '        ClipRect.Bottom := (J + 1) * MaxTileSize;'
+          '        if ClipRect.Right > DstW then ClipRect.Right := DstW;'
+          '        if ClipRect.Bottom > DstH then ClipRect.Bottom := DstH;'
+          '        X := ClipRect.Left;'
+          '        Y := ClipRect.Top;'
+          '        OffsetRect(ClipRect, -X, -Y);'
+          '        R := DstRect;'
+          '        OffsetRect(R, -X - DstRect.Left, -Y - DstRect.Top);'
+          '        Buffer.SetSize(ClipRect.Right, ClipRect.Bottom);'
+          '        StretchTransfer(Buffer, R, ClipRect, Self, SrcRect, Resampler, DrawMode, FOnPixelCombine);'
+          ''
+          '        (Buffer.Backend as IDeviceContextSupport).DrawTo(hDst,'
+          '          MakeRect(X + DstRect.Left, Y + DstRect.Top, X + ClipRect.Right,'
+          '          Y + ClipRect.Bottom), MakeRect(0, 0, Buffer.Width, Buffer.Height)'
+          '        );'
+          '      end;'
+          '    end;'
+          '  finally'
+          '    Buffer.Free;'
+          '  end;'
+          'end;    '
+          ''
           '{.$define debug_FC_line_changed}'
           'procedure TSynEditMarkupFoldColors.DoTextChanged(StartLine, EndLine,'
           '  ACountDiff: Integer);'
