REAL (well tested) CROSS {$ELSE} !!!

--- a/unit2.lfm
+++ b/unit2.lfm
@@ -551,6 +551,7 @@ object Form2: TForm2
           '  Forms {debug},'
           '  SynEdit,SynEditTypes, SynEditFoldedView, SynEditMiscProcs;'
           ''
+          '// Not a bug anymore:'
           '{$IFDEF BCB}'
           'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
           '{$ELSE}'
@@ -559,6 +560,36 @@ object Form2: TForm2
           'begin'
           '  (FBackend as IDeviceContextSupport).Draw(DstRect, SrcRect, hSrc);'
           'end;'
+          ''
+          '(* wouldn''t be relsolved, because HL not able to know which one is correct:'
+          ''
+          '{$IFDEF foo}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '{$ENDIF}'
+          '{$IFDEF bar}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '{$ENDIF}'
+          '{$IFDEF abc}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '{$ENDIF}'
+          'begin'
+          'end;'
+          ''
+          'but it can be resolved like this:  *)'
+          ''
+          '{$IFDEF foo}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '{$ELSE}'
+          '  {$IFDEF bar}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '  {$ELSE}'
+          '    {$IFDEF abc}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '    {$ENDIF}'
+          '  {$ENDIF}'
+          '{$ENDIF}'
+          'begin'
+          'end; '
           ''
           'procedure TBitmap32.DrawTo(hDst: {$IFDEF BCB}Cardinal{$ELSE}HDC{$ENDIF}; DstX, DstY: Integer);'
           'begin'
