bugfix strange $ifdef $ifdef $ifdef proc p; $else proc p2; $endif $else proc p3; endif begin..end !

--- a/unit2.lfm
+++ b/unit2.lfm
@@ -591,6 +591,19 @@ object Form2: TForm2
           'begin'
           'end; '
           ''
+          '// but it is bug:'
+          '{$IFDEF bar}'
+          '      {$IFDEF abc}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '      {$ELSE}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '      {$ENDIF}'
+          '{$ELSE}'
+          'procedure TBitmap32.Draw(const DstRect, SrcRect: TRect; hSrc: Cardinal);'
+          '{$ENDIF}'
+          'begin'
+          'end;   '
+          ''
           'procedure TBitmap32.DrawTo(hDst: {$IFDEF BCB}Cardinal{$ELSE}HDC{$ENDIF}; DstX, DstY: Integer);'
           'begin'
           '  if Empty then Exit;'
