--- a/demo/source/unit3.lfm
+++ b/demo/source/unit3.lfm
@@ -39,15 +39,15 @@ object Form3: TForm3
     Height = 435
     Top = 32
     Width = 847
-    ActivePage = TabSheet1
+    ActivePage = TabSheet8
     Align = alClient
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 1
     object TabSheet1: TTabSheet
       Caption = 'Pascal'
     end
     object TabSheet8: TTabSheet
-      Caption = 'Mini Pascal'
+      Caption = 'Original Pascal'
     end
     object TabSheet2: TTabSheet
       Caption = 'LFM'
