--- a/demo/source/unit3.lfm
+++ b/demo/source/unit3.lfm
@@ -1,7 +1,7 @@
 object Form3: TForm3
-  Left = 366
+  Left = 327
   Height = 553
-  Top = 89
+  Top = 161
   Width = 847
   Caption = 'Form3'
   ClientHeight = 553
@@ -86,7 +86,17 @@ object Form3: TForm3
       Top = 4
       Width = 75
       Caption = '&Config'
+      OnClick = btnConfigClick
       TabOrder = 0
+    end
+    object btnOpen: TButton
+      Left = 120
+      Height = 25
+      Top = 4
+      Width = 75
+      Caption = 'btnOpen'
+      OnClick = btnOpenClick
+      TabOrder = 1
     end
   end
   object StringGrid1: TStringGrid
@@ -191,5 +201,9 @@ object Form3: TForm3
     StringAttri.Foreground = clBlue
     left = 568
     top = 168
+  end
+  object OpenDialog1: TOpenDialog
+    left = 211
+    top = 14
   end
 end
