--- a/demo/source/unit3.lfm
+++ b/demo/source/unit3.lfm
@@ -1,7 +1,7 @@
 object Form3: TForm3
-  Left = 327
+  Left = 465
   Height = 553
-  Top = 161
+  Top = 157
   Width = 847
   Caption = 'Form3'
   ClientHeight = 553
@@ -34,42 +34,6 @@ object Form3: TForm3
       TabOrder = 0
     end
   end
-  object PageControl1: TPageControl
-    Left = 0
-    Height = 412
-    Top = 32
-    Width = 460
-    TabStop = False
-    ActivePage = TabSheet1
-    Align = alClient
-    TabIndex = 0
-    TabOrder = 1
-    OnChange = PageControl1Change
-    object TabSheet1: TTabSheet
-      Caption = 'Pascal'
-    end
-    object TabSheet8: TTabSheet
-      Caption = 'Original Pascal'
-    end
-    object TabSheet2: TTabSheet
-      Caption = 'LFM'
-    end
-    object TabSheet3: TTabSheet
-      Caption = 'Demo Fold'
-    end
-    object TabSheet6: TTabSheet
-      Caption = 'Color Fold'
-    end
-    object TabSheet4: TTabSheet
-      Caption = 'Python'
-    end
-    object TabSheet5: TTabSheet
-      Caption = 'XML'
-    end
-    object TabSheet7: TTabSheet
-      Caption = 'JS'
-    end
-  end
   object Panel2: TPanel
     Left = 0
     Height = 32
@@ -79,7 +43,7 @@ object Form3: TForm3
     BevelOuter = bvNone
     ClientHeight = 32
     ClientWidth = 847
-    TabOrder = 2
+    TabOrder = 1
     object btnConfig: TButton
       Left = 35
       Height = 25
@@ -101,10 +65,11 @@ object Form3: TForm3
   end
   object StringGrid1: TStringGrid
     Left = 465
-    Height = 412
+    Height = 435
     Top = 32
     Width = 382
     Align = alRight
+    AlternateColor = 16249586
     AutoEdit = False
     ColCount = 6
     Columns = <    
@@ -129,36 +94,101 @@ object Form3: TForm3
         Width = 45
       end>
     DefaultColWidth = 120
-    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goColSizing, goColSpanning, goSmoothScroll]
-    TabOrder = 3
+    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goRangeSelect, goColSizing, goRowSelect, goColSpanning, goSmoothScroll]
+    TabOrder = 2
     OnDblClick = StringGrid1DblClick
     OnSelection = StringGrid1Selection
   end
   object Splitter1: TSplitter
     Left = 460
-    Height = 412
+    Height = 435
     Top = 32
     Width = 5
     Align = alRight
     ResizeAnchor = akRight
   end
-  object StatusBar1: TStatusBar
+  object Panel4: TPanel
     Left = 0
-    Height = 23
-    Top = 444
-    Width = 847
-    Panels = <    
-      item
-        Alignment = taCenter
-        Width = 70
-      end    
-      item
-        Width = 30
-      end    
-      item
-        Width = 50
-      end>
-    SimplePanel = False
+    Height = 435
+    Top = 32
+    Width = 460
+    Align = alClient
+    Caption = 'Panel4'
+    ClientHeight = 435
+    ClientWidth = 460
+    TabOrder = 4
+    object StatusBar1: TStatusBar
+      Left = 1
+      Height = 23
+      Top = 388
+      Width = 458
+      Panels = <      
+        item
+          Alignment = taCenter
+          Width = 70
+        end      
+        item
+          Width = 100
+        end      
+        item
+          Width = 50
+        end>
+      SimplePanel = False
+    end
+    object PageControl1: TPageControl
+      Left = 1
+      Height = 387
+      Top = 1
+      Width = 458
+      TabStop = False
+      ActivePage = TabSheet1
+      Align = alClient
+      TabIndex = 0
+      TabOrder = 1
+      OnChange = PageControl1Change
+      object TabSheet1: TTabSheet
+        Caption = 'Pascal'
+      end
+      object TabSheet8: TTabSheet
+        Caption = 'Original Pascal'
+      end
+      object TabSheet2: TTabSheet
+        Caption = 'LFM'
+      end
+      object TabSheet3: TTabSheet
+        Caption = 'Demo Fold'
+      end
+      object TabSheet6: TTabSheet
+        Caption = 'Color Fold'
+      end
+      object TabSheet4: TTabSheet
+        Caption = 'Python'
+      end
+      object TabSheet5: TTabSheet
+        Caption = 'XML'
+      end
+      object TabSheet7: TTabSheet
+        Caption = 'JS'
+      end
+    end
+    object StatusBar2: TStatusBar
+      Left = 1
+      Height = 23
+      Top = 411
+      Width = 458
+      Panels = <      
+        item
+          Alignment = taCenter
+          Width = 70
+        end      
+        item
+          Width = 100
+        end      
+        item
+          Width = 50
+        end>
+      SimplePanel = False
+    end
   end
   object SynFreePascalSyn1: TSynFreePascalSyn
     Enabled = False
